Ajustes para publicação.

--- a/package.json
+++ b/package.json
@@ -1,35 +1,37 @@
 {
-	"name": "v-sqlrun",
-	"version": "1.0.0",
+	"name": "@fabioivan/v-sqlrun",
+    "private": false,
+	"version": "1.0.2",
 	"description": "Execute Sql scripts in a server with multiple databases",
 	"main": "index.js",
-  "node": "18.16.0",
+	"node": "18.18.0",
 	"scripts": {
-    "build": "npm run clean && npm run tsc && npm run chmod",
+		"build": "npm run clean && npm run tsc && npm run chmod",
 		"start": "node bin/index.js",
 		"dev": "ts-node src/index.ts",
 		"tsc": "tsc",
-    "chmod": "chmod u+x ./bin/index.js",
-    "clean": "rm -rf ./bin"
+		"chmod": "chmod u+x ./bin/index.js",
+		"clean": "rm -rf ./bin"
 	},
 	"bin": {
 		"vsqlrun": "./bin/index.js"
 	},
-	"keywords": [],
-	"author": "",
+    "files": [
+        "bin",
+        "Readme.md"
+    ],
+	"author": "Fábio Ivan Borchardt",
 	"license": "ISC",
 	"dependencies": {
-		"@gitbeaker/rest": "^39.27.0",
 		"@types/commander": "^2.12.2",
 		"@types/node": "^22.5.4",
 		"@types/pg": "^8.11.9",
-		"simple-git": "^3.27.0",
+		"inquirer": "^12.3.3",
 		"typescript": "^5.6.2"
 	},
 	"devDependencies": {
 		"chalk": "^4.0.0",
 		"commander": "^12.1.0",
-		"dotenv": "^16.4.5",
 		"pg": "^8.12.0"
 	}
 }
